<resources>
    <string name="app_name">WebAPIApp</string>
    <string name="name_of_pokemon">Name of Pokemon</string>
    <string name="search">Search</string>
    <string name="pokemon">pokemon</string>
    <string name="nat_num">#0000</string>
    <string name="name">Name</string>
    <string name="base_value">000</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="base_xp">Base XP</string>
    <string name="ability">Ability</string>
    <string name="na">N/A</string>
    <string name="move">Move</string>
</resources>