<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_CSL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <EditText
            android:id="@+id/enter_name_ET"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:autofillHints="name"
            android:inputType="text"
            android:textSize="18sp"
            android:hint="@string/name_of_pokemon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/search_BT"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/info_LLO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="12dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/nat_num_TV"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:text="@string/nat_num"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_TV"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_IV"
                android:layout_width="224dp"
                android:layout_height="208dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/pokemon"
                android:src="@drawable/pokemon_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="445dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TableRow
                android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/weight_TV"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/weight_value_TV"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/base_value"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow
                android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/height_TV"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/height_value_TV"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/base_value"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow
                android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/base_xp_TV"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/base_xp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/base_xp_value_TV"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/base_value"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow
                android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/move_TV"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/move"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/move_value_TV"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/na"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow
                android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/ability_TV"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ability"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/ability_value_TV"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/na"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_weight="1"/>
            </TableRow>

        </TableLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>